--- a/conf/server.conf
+++ b/conf/server.conf
@@ -7,10 +7,10 @@ thread_number=4
 queue_max_size=4096
 
 #dict path
-dict_path=/usr/share/CppJieba/dict/jieba.dict.utf8
+dict_path=../dict/jieba.dict.utf8
 
 #model path
-model_path=/usr/share/CppJieba/dict/hmm_model.utf8
+model_path=../dict/hmm_model.utf8
 
 #user_dict_path
-#user_dict_path=/usr/share/CppJieba/dict/user.dict.utf8
+user_dict_path=../dict/user.dict.utf8
